--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Victoria's CV</title>
     </head>
     <body>
-        <header><h1>Victoria's CV</h1></header>
+        <!--<header><h1>Victoria's CV</h1></header>
         <main>
             <table>
                 <tbody>
@@ -24,57 +24,61 @@
                     </tr>
                 </tbody>
             </table>
-        <h2>Summary</h2>
-        <div class="line"></div>
-        <ul>
-            <li>Enthusiastic and highly-motivated JavaScript Developer with 1 year of experience in the frontend development</li>
-            <li>Communicative and able to work in multicultural teams</li>
-            <li>Able to work independently, in cooperation or under the guidance</li>
-            <li>Responsible, attentive and hardworking</li>
-        </ul>
+        -->
+            <div class="cv-header">
+                <div class="top-holder">
+                    <div class="top-image"></div>
+                    <div class="image"></div>
+                </div>
+            </div>
+            <h1>Victoria</h1>
+            <span class="qualification">Javascript Developer</span>
+            <span class="contacts">
+                <a class="phone" href="tel:+37529297474">(+375-29) 297-47-24</a>
+                <a class="orange" href="mailto:raccooccoon@gmail.com">raccooccoon@gmail.com</a>
+            </span>
 
-        <h2>Skills and abilities</h2>
-        <div class="line"></div>
-        <ul>
-            <li>Typescript, EcmaScript 6</li>
-            <li>jQuery, Bootstrap, Angular</li>
-            <li>NodeJS</li>
-            <li>WebStorm, Microsoft Visual Studio, MS Office</li>
-            <li>GIT, Github</li>
-            <li>English (intermediate level)</li>
-        </ul>
+            <h2>Summary</h2>
+            <div class="line"></div>
+            <ul>
+                <li>Enthusiastic and highly-motivated JavaScript Developer with 1 year of experience in the frontend development</li>
+                <li>Communicative and able to work in multicultural teams</li>
+                <li>Able to work independently, in cooperation or under the guidance</li>
+                <li>Responsible, attentive and hardworking</li>
+            </ul>
 
-        <h2>Work experience</h2>
-        <div class="line"></div>
-        <p>2018-present: «Undefined systems»</p>
-        <p>Software engineer, Frontend Developer</p>
+            <h2>Skills and abilities</h2>
+            <div class="line"></div>
+            <ul>
+                <li>Typescript, EcmaScript 6</li>
+                <li>jQuery, Bootstrap, Angular</li>
+                <li>NodeJS</li>
+                <li>WebStorm, Microsoft Visual Studio, MS Office</li>
+                <li>GIT, Github</li>
+                <li>English (intermediate level)</li>
+            </ul>
 
-        <h2>Education</h2>
-        <div class="line"></div>
-        <P>2008-2012: «Belarusian State Economic University»</p>
-        <p>Faculty: Finance and Banking</p>
-        <p>Field: Accounting, Analysis and Auditing in Banks</P>
+            <h2>Work experience</h2>
+            <div class="line"></div>
+            <p>2018-present: «Undefined systems»</p>
+            <p>Software engineer, Frontend Developer</p>
 
-        <h2>Additional education</h2>
-        <div class="line"></div>
-        <ul>
-            <li>2017-2018: «JavaScript/Front-end» Course, The Rolling Scopes School</li>
-            <li>2015-2016: Chinese language classes at Belarus Republic Confucius Institute</li>
-            <li>2015: The Motivational English/Professional Skills (MEPS) Training Course. 
-                    EU Project – Capacity Development Facility to Support the Implementation of Sector Programmes under the ENPI Annual Action Programmes for Belarus
-            </li>
-            <li>2011-2012: Conversational English courses at International House School</li>
-        </ul>
+            <h2>Education</h2>
+            <div class="line"></div>
+            <P>2008-2012: «Belarusian State Economic University»</p>
+            <p>Faculty: Finance and Banking</p>
+            <p>Field: Accounting, Analysis and Auditing in Banks</P>
 
-
-    
-
+            <h2>Additional education</h2>
+            <div class="line"></div>
+            <ul>
+                <li>2017-2018: «JavaScript/Front-end» Course, The Rolling Scopes School</li>
+                <li>2015-2016: Chinese language classes at Belarus Republic Confucius Institute</li>
+                <li>2015: The Motivational English/Professional Skills (MEPS) Training Course. 
+                    EU Project – Capacity Development Facility to Support the Implementation of Sector Programmes under the ENPI Annual Action Programmes for Belarus</li>
+                <li>2011-2012: Conversational English courses at International House School</li>
+            </ul>
         </main>
-
-        <footer>
-
-        </footer>
+        <footer></footer>
     </body>
-
-
 </html>
