--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
                 <li>2011-2012: Conversational English courses at International House School</li>
             </ul>
         </main>
-        <footer></footer>
+        <footer>2019</footer>
     </body>
 </html>
