Fix bag in contacts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1>Victoria</h1>
             <span class="qualification">Javascript Developer</span>
             <span class="contacts">
-                <a class="phone" href="tel:+37529297474">(+375-29) 297-47-24</a>
+                <a class="phone" href="tel:+37529297****">(+375-29) 297-**-**</a>
                 <a class="orange" href="mailto:raccooccoon@gmail.com">raccooccoon@gmail.com</a>
             </span>
 
